--- a/Forum/Forum.csproj
+++ b/Forum/Forum.csproj
@@ -19,8 +19,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="ViewComponents\" />
+    <None Remove="Models\Helper\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewComponents\" />
+    <Folder Include="Models\Helper\" />
   </ItemGroup>
 </Project>
