--- a/Forum/Forum.csproj
+++ b/Forum/Forum.csproj
@@ -30,5 +30,9 @@
     <Folder Include="Views\Shared\Components\" />
     <Folder Include="Views\Topic\" />
     <Folder Include="Views\Thread\" />
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Remove="wwwroot\images\" />
   </ItemGroup>
 </Project>
